force-app/main/default/objects/AssessmentResponse__c/AssessmentResponse__c.object-meta.xml
<CustomObject>
    <description>Store the answer responses of assessment.</description>
    <label>Assessment Response</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>