force-app/main/default/objects/AssessmentResponse__c/fields/AnswerChoice__c.field-meta.xml
<CustomField>
    <fullName>AnswerChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the answer choice record selected for an assessment question</description>
    <label>Answer Choice</label>
    <referenceTo>AnswerChoice__c</referenceTo>
    <relationshipLabel>Assessment Responses</relationshipLabel>
    <relationshipName>Assessment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>