force-app/main/default/objects/AssessmentResponse__c/fields/AssessmentGeolocation__c.field-meta.xml
<CustomField>
    <fullName>AssessmentGeolocation__c</fullName>
    <description>Used to store lat long of the zipcode question</description>
    <label>Assessment Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>