force-app/main/default/objects/AssessmentResponse__c/fields/TextAnswer__c.field-meta.xml
<CustomField>
    <fullName>TextAnswer__c</fullName>
    <description>The text answer recorded if the answer response required for a question is text input</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>TextAnswer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>