force-app/main/default/objects/AssessmentResponse__c/recordTypes/RE_Assessment_Response.recordType-meta.xml
<RecordType>
    <fullName>RE_Assessment_Response</fullName>
    <active>true</active>
    <label>Resource Engine Assessment Response</label>
</RecordType>